# telegram-food-bot

./: .env.example  .gitignore.py  main.py  pyproject.toml  render.yaml  requirements.txt  runtime.txt
bot/: handlers.py
models/: schemas.py
services/: gemini.py  nutrition.py  supabase_client.py
webapp/: add_meal.html  index.html  settings.html
webapp/static/: style.css
