# ============================================
# Файл: pyproject.toml
# ============================================
[project]
name = "telegram-food-bot"
version = "1.0.0"
description = "Telegram food tracker bot with Gemini AI"
requires-python = ">=3.9,<3.14"
dependencies = [
    "python-telegram-bot>=20.7,<21.0",
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "python-multipart>=0.0.6,<0.0.7",
    "httpx>=0.25.0,<0.26.0",
    "supabase>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "Pillow>=10.1.0,<11.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "pydantic>=2.5.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
