[project]
name = "telegram-food-bot"
version = "1.0.0"
description = "Telegram food tracker bot with Gemini AI"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-telegram-bot>=21.10",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "supabase>=2.15.0",
    "python-dotenv>=1.0.0",
    "Pillow>=11.0.0",
    "apscheduler>=3.11.0",
    "pydantic>=2.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
