# ============================================
# Файл: pyproject.toml (спрощений)
# ============================================
[project]
name = "telegram-food-bot"
version = "1.0.0"
description = "Telegram food tracker bot with Gemini AI"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-telegram-bot==20.7",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "httpx==0.25.1",
    "supabase==2.5.3",
    "python-dotenv==1.0.0",
    "Pillow==10.1.0",
    "apscheduler==3.10.4",
    "pydantic==2.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-version = "3.11"
